<resources>
    <string name="app_name">LukaKu</string>
    <string name="title_menu_1">Start Detection</string>
    <string name="title_menu_2">First Aid</string>
    <string name="title_menu_3">Drug Recommendations</string>
    <string name="desc_menu_1">Take a snapshot or photo with the camera,\nor upload an image from your phone gallery.</string>
    <string name="desc_menu_2">Access information quickly for first aid methods\nthat you can do in everyday life.</string>
    <string name="desc_menu_3">Get access to healing with ready-to-order drug recommendations.</string>
    <string name="desc_sign">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="join_now">Join Now</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_detection">Detection</string>
    <string name="title_profile">Profile</string>
    <string name="title_hospital">Hospital</string>
    <string name="settings_menu">Settings</string>
    <string name="image_profile">Image Profile</string>
    <string name="history">History</string>
    <string name="date">Date</string>
    <string name="wound_type">Wound Type</string>
    <string name="wound_status">Wound Status</string>
    <string name="detection_result_photo">Photo Detection Results</string>
    <string name="error_camera_start">Failed to bring up the camera.</string>
    <string name="error_camera_permission">Not getting permissions.</string>
    <string name="error_camera_take">Failed to take picture.</string>
    <string name="take_photo">Take Photo</string>
    <string name="switch_camera">Switch camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="close">Close</string>
    <string name="flash">flash</string>
    <string name="point_to_take_image">Point to take image</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="lets_get_started">Let\'s Get Started!</string>
    <string name="zoom_status">Zoom: %sx</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_settings">App Settings</string>
    <string name="change_language">Change Language</string>
    <string name="common">COMMON</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">THEME</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title_sign_out">Are you sure?</string>
    <string name="dialog_message_sign_out">You need to sign in again after sign out.</string>
    <string name="sign_in_failed_message">Please check your internet network</string>
    <string name="sign_in_welcome_message">Welcome, %s</string>
    <string name="account_created_success_message">Account created successfully</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="still_under_development">Still under development!</string>
    <string name="selected_image">Selected Image</string>
    <string name="reshoot">Reshoot</string>
    <string name="detection_continue">Continue</string>
    <string name="title_gallery">Choose a Picture</string>
    <string name="crop_image">Crop Image</string>
    <string name="image_of_headline">Image of Headline</string>
    <string name="search_hint">Search articles…</string>
    <string name="articles">Articles</string>
    <string name="back">Back</string>
    <string name="please_wait">Please Wait…</string>
    <string name="name_display">Hi, %s</string>
    <string name="wound_desc">Let’s get to know your wound more!</string>
    <string name="view_more">View More</string>
    <string name="notifications">Notifications</string>
    <string name="updates">Updates</string>
    <string name="messages">Messages</string>
    <string name="drugstore">Drugstore</string>
</resources>