<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionCameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_capture_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_take_camera" />

    <ImageView
        android:id="@+id/iv_switch_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/switch_camera"
        app:layout_constraintBottom_toBottomOf="@+id/iv_capture_image"
        app:layout_constraintEnd_toEndOf="@+id/view_finder"
        app:layout_constraintStart_toEndOf="@+id/iv_capture_image"
        app:layout_constraintTop_toTopOf="@+id/iv_capture_image"
        app:srcCompat="@drawable/ic_flip_camera" />

    <ImageView
        android:id="@+id/iv_open_gallery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/open_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/iv_capture_image"
        app:layout_constraintEnd_toStartOf="@+id/iv_capture_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_capture_image"
        app:srcCompat="@drawable/ic_photo_galery" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/iv_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/flash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_off" />

    <SeekBar
        android:id="@+id/seek_bar_zoom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_capture_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_smoke"
        app:layout_constraintBottom_toTopOf="@+id/seek_bar_zoom"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_zoom"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_zoom"
        tools:text="Zoom: 1.05x" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/point_to_take_image"
        app:layout_constraintBottom_toTopOf="@+id/iv_capture_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_finder"
        app:srcCompat="@drawable/ic_detector_line" />

</androidx.constraintlayout.widget.ConstraintLayout>