<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewer.ViewerFragment">

    <com.oginotihiro.cropview.CropView
        android:id="@+id/iv_selected_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_pearl"
        android:contentDescription="@string/selected_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/lato_black"
        android:gravity="center"
        android:text="@string/detection_continue"
        android:textColor="@color/selector_ic"
        app:drawableEndCompat="@drawable/ic_skip_arrow"
        app:drawableTint="@color/selector_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_reshoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/lato_black"
        android:gravity="center"
        android:text="@string/reshoot"
        android:textColor="@color/selector_ic"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:drawableTint="@color/selector_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/crop_image"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>