<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.SignFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_sign"
        style="@style/LogoMenu"
        android:contentDescription="@string/lets_get_started"
        android:src="@drawable/ic_illustration_sign"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_sign"
        style="@style/TextTitle"
        android:text="@string/lets_get_started"
        app:layout_constraintEnd_toEndOf="@+id/image_sign"
        app:layout_constraintStart_toStartOf="@+id/image_sign"
        app:layout_constraintTop_toBottomOf="@+id/image_sign" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/desc_sign"
        style="@style/TextDescription"
        android:text="@string/desc_sign"
        app:layout_constraintEnd_toEndOf="@+id/title_sign"
        app:layout_constraintStart_toStartOf="@+id/title_sign"
        app:layout_constraintTop_toBottomOf="@+id/title_sign" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/ButtonTheme"
        android:text="@string/sign_in_with_google"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>